[package]
name = "rquickjs-serde"
description = "Serde support for rquickjs"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-serde"
readme = "README.md"
authors = ["Emile Fugulin <code@efugulin.com>", "The Javy Project Developers"]

[dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "3fc3d357c08ae3df2090a4954dfa0739cd44a602" }
serde = "1"

[dev-dependencies]
quickcheck = "1"
serde = { version = "1", features = ["derive"] }
