[package]
name = "rquickjs-serde"
description = "Serde support for rquickjs"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rquickjs/rquickjs-serde"
readme = "README.md"
authors = ["Emile Fugulin <code@efugulin.com>", "The Javy Project Developers"]

[dependencies]
rquickjs = { version = "0.11", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
quickcheck = "1"
serde = { version = "1", features = ["derive"] }
